# dotnet-sce

./: CONVERSION_PLAN.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dotnet_sce/: __init__.py  __main__.py  binary_reader.py  bundle.py  bundle_file_entry.py  bundle_header.py  cli.py  dotnet_sce.py
